# lposv3

./: .gitignore  CHANGELOG.md  GITHUB-UPLOAD.md  GOOGLE-DRIVE-UPDATE.md  INSTALL.cmd  INSTALL.ps1  INSTALL.sh  MANIFEST.json  NOTICE-SKILLOPT.md  README.md  RELEASE-MANIFEST.json  RELEASE-TEST-REPORT.md  RELEASE.json  SBOM.json  SHA256SUMS  install.py  patch.md  pyproject.toml  verify_release.py
Examples/: INSTALL-WITH-HERMES.md
Tests/: RELEASE-CHECKLIST.md  mutation_test.py  verify_compact.py
Tools/: build_release.py  compile.py
config/: default_registry.json
docs/: ADAPTER-PROTOCOL.md  ARCHITECTURE.md  COMPLIANCE.md  DASHBOARD.md  ESCALATION-POLICY.md  HERMES-DASHBOARD.md  MONITOR.md  OS-UPGRADE-RADAR.md  POLICY-COVERAGE.md  SECURITY.md  SENTINEL.md  SOC2-PROGRAM.md  TESTING.md  THREAT-MODEL.md
examples/: example_model_host.py  standing-operation.json
guilds/: GUILD-038-support-engineering.md
schemas/: action-plan.schema.json  approval-request.schema.json  artifact-specification.schema.json  artifact.schema.json  benchmark-definition.schema.json  interpretation-contract.schema.json  message-identity.schema.json  principal-security-report.schema.json  review-envelope.schema.json  security-assessment.schema.json  standing-operation-run.schema.json  task-envelope.schema.json  workflow-definition.schema.json
specialists/: SPECIALIST-033-bug-triage-analyst.md
standing-operations/: SO-022-bug-remediation.md
tests/: support.py  test_approvals_actions.py  test_bug_remediation.py  test_compliance.py  test_compliance_evidence.py  test_dashboard.py  test_wiki.py  (+21 more)
(+438 files in other folders)
