[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lpos-os"
version = "4.0.0"
description = "LPOS v4: integrated agent operating system specification, deterministic control plane, schemas, and workflows"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Listening Post / LPOS"}]
dependencies = []
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
dev = [
  "jsonschema>=4.20",
  "pytest>=8",
]

[project.scripts]
lpos = "lpos_engine.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
lpos_engine = [
  "sql/*.sql",
  "schemas/*.schema.json",
  "config/*.json",
  "spec/*.md",
  "spec/*.yaml",
  "spec/skills/*/*.md",
  "workflows/*.json",
  "evals/*.json",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
